--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -2,11 +2,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 .content {
-    max-width: 300px;
-    margin: 2px auto;
+    max-width: 500px;
+    margin: 14px auto;
     padding: 10px;
 }
 
@@ -18,17 +19,18 @@
 
 .content form input {
     border: none;
-    border-bottom: 1.5px solid #000;
+    border-bottom: 1px solid darkgrey;
     padding: 2px;
+    font-size: 24px;
 }
 
 li {
-    background-image: url("../assets/background.jpg");
     background-position: right;
     padding: 20px;
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 li button {
@@ -41,5 +43,55 @@ li button {
 
 .completed {
     text-decoration: line-through;
-    color: rgb(151, 133, 133);
+    color: #a9a9a936;
+    transition: color 1s;
+}
+
+.details-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.details-content hr {
+    margin-top: 20px;
+    width: 100%;
+    border: 1px solid #b3b1b13d;
+}
+
+.details {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.details-nav button {
+    background-color: #FFF;
+    border: 1px solid darkgrey;
+    font-size: 16px;
+    padding: 1px;
+    margin: 0 4px 0 0;
+    font-weight: bold;
+    color: darkgrey;
+}
+
+.details-nav .active:focus {
+    background-color: green;
+    color: #fff;
+    transition: color 1s;
+    transition: background-color 1s;
+}
+
+.details-nav .complete:focus {
+    background-color: red;
+    color: #fff;
+    transition: color 1s;
+    transition: background-color 1s;
+}
+
+.details-nav .all:focus {
+    background-color: orange;
+    color: #fff;
+    transition: color 1s;
+    transition: background-color 1s;
 }
