--- a/src/styles.css
+++ b/src/styles.css
@@ -9,14 +9,24 @@ li {
 }
 
 .content {
+    box-shadow: 5px 5px 5px 5px darkgrey;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+
 .itens {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
+    color: darkgrey;
+    font-size: 24px;
+}
+
+.itens hr {
+    margin-top: 20px;
+    width: 100%;
+    border: 1px solid #b3b1b13d;
 }
