--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ li {
 }
 
 .content {
-    box-shadow: 5px 5px 5px 5px darkgrey;
+    box-shadow: 5px 5px 5px 5px #a9a9a952;
     display: flex;
     flex-direction: column;
     align-items: center;
