Adicionado regra do toast de finalizar a tarefa

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,12 +17,13 @@ li {
 }
 
 .itens {
+    font-family: cursive !important;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
     color: darkgrey;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .itens hr {
