--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -1,9 +1,8 @@
-
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
 }
 
 .content {
@@ -22,12 +21,13 @@
     border: none;
     border-bottom: 1px solid darkgrey;
     padding: 2px;
-    font-size: 24px;
+    font-size: 18px;
+    font-family: cursive;
 }
 
 li {
     background-position: right;
-    padding: 20px;
+    padding: 18px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -44,7 +44,7 @@ li button {
 
 .completed {
     text-decoration: line-through;
-    color: #a9a9a936;
+    color: #a9a9a9bd;
     transition: color 1s;
 }
 
