--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -22,7 +22,7 @@
     border-bottom: 1px solid darkgrey;
     padding: 2px;
     font-size: 18px;
-    font-family: cursive;
+    font-family: 'Nunito', sans-serif;
 }
 
 li {
