--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@ li {
 }
 
 .itens {
-    font-family: cursive !important;
+    font-family: 'Nunito', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
