--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -1,103 +1,103 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    /* font-family: 'Roboto', sans-serif; */
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  /* font-family: 'Roboto', sans-serif; */
 }
 
 .content {
-    max-width: 500px;
-    margin: 14px auto;
-    padding: 10px;
+  max-width: 500px;
+  margin: 14px auto;
+  padding: 10px;
 }
 
 .content form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .content form input {
-    border: none;
-    border-bottom: 1px solid darkgrey;
-    padding: 2px;
-    font-size: 18px;
-    font-family: 'Nunito', sans-serif;
+  border: none;
+  border-bottom: 1px solid darkgrey;
+  padding: 2px;
+  font-size: 18px;
+  font-family: "Nunito", sans-serif;
 }
 
 li {
-    background-position: right;
-    padding: 18px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-position: right;
+  padding: 18px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 li button {
-    border: none;
-    cursor: pointer;
-    color: red;
-    font-size: 18px;
-    background: transparent;
+  border: none;
+  cursor: pointer;
+  color: red;
+  font-size: 18px;
+  background: transparent;
 }
 
 .completed {
-    text-decoration: line-through;
-    color: #a9a9a9bd;
-    transition: color 1s;
+  text-decoration: line-through;
+  color: #a9a9a9bd;
+  transition: color 1s;
 }
 
 .details-content {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .details-content hr {
-    margin-top: 20px;
-    width: 100%;
-    border: 1px solid #b3b1b13d;
+  margin-top: 20px;
+  width: 100%;
+  border: 1px solid #b3b1b13d;
 }
 
 .details {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .details-nav button {
-    background-color: #FFF;
-    border: 1px solid darkgrey;
-    font-size: 16px;
-    padding: 1px;
-    margin: 0 4px 0 0;
-    font-weight: bold;
-    color: darkgrey;
+  background-color: #fff;
+  border: 1px solid darkgrey;
+  font-size: 16px;
+  padding: 1px;
+  margin: 0 4px 0 0;
+  font-weight: bold;
+  color: darkgrey;
 }
 
 .details-nav .active:focus {
-    background-color: green;
-    color: #fff;
-    transition: color 1s;
-    transition: background-color 1s;
+  background-color: green;
+  color: #fff;
+  transition: color 1s;
+  transition: background-color 1s;
 }
 
 .details-nav .complete:focus {
-    background-color: red;
-    color: #fff;
-    transition: color 1s;
-    transition: background-color 1s;
+  background-color: red;
+  color: #fff;
+  transition: color 1s;
+  transition: background-color 1s;
 }
 
 .details-nav .all:focus {
-    background-color: orange;
-    color: #fff;
-    transition: color 1s;
-    transition: background-color 1s;
+  background-color: orange;
+  color: #fff;
+  transition: color 1s;
+  transition: background-color 1s;
 }
 
 .details-nav .clear-all {
-    background-color: red;
-    color: #FFF;
+  background-color: red;
+  color: #fff;
 }
